--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 /web-party-equipment/nbproject/private/
 /web-party-equipment/web-party-equipment-war/nbproject/private/
 /web-party-equipment/web-party-equipment-ejb/nbproject/private/
+/web-party-equipment/web-party-equipment-war/build/
+/web-party-equipment/web-party-equipment-ejb/build/
+/web-party-equipment/web-party-equipment-ejb/dist/
+/web-party-equipment/build/
+/web-party-equipment/web-party-equipment-war/dist/
