Edited list of ignored files

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,126 @@
 /web-party-equipment/web-party-equipment-ejb/dist/
 /web-party-equipment/build/
 /web-party-equipment/web-party-equipment-war/dist/
+web-party-equipment/dist/gfdeploy/web-party-equipment/gfv3ee6.dpf
+web-party-equipment/dist/gfdeploy/web-party-equipment/lib/cdi-api.jar
+web-party-equipment/dist/gfdeploy/web-party-equipment/META-INF/MANIFEST.MF
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/.netbeans_automatic_build
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/.netbeans_update_resources
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/resouces.res
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Adresse.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Adresse.rapt
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Adresse_.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Article.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Article.rapt
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Article_.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Categorie.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Categorie.rapt
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Categorie_.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Client.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Client.rapt
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Client_.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Facture.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Facture.rapt
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Facture_.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Langue.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Langue.rapt
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Langue_.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Lignecommande.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Lignecommande.rapt
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Lignecommande_.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Pays.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Pays.rapt
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Pays_.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Promotion.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Promotion.rapt
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Promotion_.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Tradpromoarticle.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Tradpromoarticle.rapt
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Tradpromoarticle_.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/TradpromoarticlePK.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/TradpromoarticlePK.rapt
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/TradpromoarticlePK_.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Traductionarticle.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Traductionarticle.rapt
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Traductionarticle_.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/TraductionarticlePK.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/TraductionarticlePK.rapt
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/TraductionarticlePK_.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Traductioncategorie.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Traductioncategorie.rapt
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Traductioncategorie_.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/TraductioncategoriePK.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/TraductioncategoriePK.rapt
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/TraductioncategoriePK_.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Traductionpays.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Traductionpays.rapt
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/Traductionpays_.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/TraductionpaysPK.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/TraductionpaysPK.rapt
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/EntityBeans/TraductionpaysPK_.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/META-INF/MANIFEST.MF
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/META-INF/persistence.xml
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/Modele/Encryption.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/Modele/TexteInfo.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/AbstractFacade.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/AdresseFacade.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/AdresseFacadeLocal.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/ArticleFacade.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/ArticleFacadeLocal.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/CategorieFacade.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/CategorieFacadeLocal.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/ClientFacade.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/ClientFacadeLocal.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/FactureFacade.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/FactureFacadeLocal.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/LangueFacade.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/LangueFacadeLocal.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/LignecommandeFacade.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/LignecommandeFacadeLocal.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/PaysFacade.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/PaysFacadeLocal.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/PromotionFacade.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/PromotionFacadeLocal.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/TradpromoarticleFacade.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/TradpromoarticleFacadeLocal.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/TraductionarticleFacade.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/TraductionarticleFacadeLocal.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/TraductioncategorieFacade.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/TraductioncategorieFacadeLocal.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/TraductionpaysFacade.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-ejb_jar/SessionBeans/TraductionpaysFacadeLocal.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/index.xhtml
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/MainTemplate.xhtml
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/META-INF/MANIFEST.MF
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/resources/css/cssLayout.css
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/resources/css/default.css
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/resources/images/1.png
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/resources/images/10.png
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/resources/images/11.png
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/resources/images/12.png
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/resources/images/13.png
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/resources/images/14.png
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/resources/images/15.png
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/resources/images/16.png
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/resources/images/2.png
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/resources/images/3.png
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/resources/images/4.png
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/resources/images/5.png
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/resources/images/6.png
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/resources/images/7.png
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/resources/images/8.png
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/resources/images/9.png
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/resources/images/basket.png
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/resources/images/dutchFlag.png
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/resources/images/englishFlag.png
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/resources/images/frenchFlag.png
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/WEB-INF/sun-web.xml
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/WEB-INF/web.xml
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/WEB-INF/classes/.netbeans_automatic_build
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/WEB-INF/classes/.netbeans_update_resources
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/WEB-INF/classes/language/lang.properties
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/WEB-INF/classes/language/lang_en.properties
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/WEB-INF/classes/language/lang_fr.properties
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/WEB-INF/classes/language/lang_nl.properties
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/WEB-INF/classes/ManagedBeans/CategorieMB.class
+web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/WEB-INF/classes/ManagedBeans/PaysMB.class
