First commit from Guillaume !

--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,4 @@ web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_wa
 web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/WEB-INF/classes/language/lang_nl.properties
 web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/WEB-INF/classes/ManagedBeans/CategorieMB.class
 web-party-equipment/dist/gfdeploy/web-party-equipment/web-party-equipment-war_war/WEB-INF/classes/ManagedBeans/PaysMB.class
+/web-party-equipment/dist/
