--- a/web-party-equipment/nbproject/project.properties
+++ b/web-party-equipment/nbproject/project.properties
@@ -9,6 +9,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/${jar.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
+file.reference.primefaces-5.2.jar=primefaces-5.2.jar
 j2ee.appclient.mainclass.args=${j2ee.appclient.tool.args}
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
@@ -37,4 +38,6 @@ project.web-party-equipment-war=web-party-equipment-war
 reference.web-party-equipment-ejb.dist-ear=${project.web-party-equipment-ejb}/dist/web-party-equipment-ejb.jar
 reference.web-party-equipment-war.dist-ear=${project.web-party-equipment-war}/dist/web-party-equipment-war.war
 resource.dir=setup
+run.classpath=\
+    ${file.reference.primefaces-5.2.jar}
 source.root=.
