--- a/web-party-equipment/web-party-equipment-war/nbproject/project.properties
+++ b/web-party-equipment/web-party-equipment-war/nbproject/project.properties
@@ -30,7 +30,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.cdi-api.jar=/Applications/NetBeans/glassfish-4.1/glassfish/modules/cdi-api.jar
-file.reference.primefaces-5.2.jar=/Users/Pierre/Documents/JavaEE/primefaces-5.2.jar
+file.reference.primefaces-5.2.jar=../primefaces-5.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
