--- a/web-party-equipment/web-party-equipment-war/nbproject/project.properties
+++ b/web-party-equipment/web-party-equipment-war/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.cdi-api.jar=/Applications/NetBeans/glassfish-4.1/glassfish/modules/cdi-api.jar
+file.reference.cdi-api.jar=../cdi-api.jar
 file.reference.primefaces-5.2.jar=../primefaces-5.2.jar
 includes=**
 j2ee.compile.on.save=true
@@ -46,8 +46,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${reference.web-party-equipment-ejb.dist}:\
-    ${file.reference.cdi-api.jar}:\
-    ${file.reference.primefaces-5.2.jar}
+    ${file.reference.primefaces-5.2.jar}:\
+    ${file.reference.cdi-api.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
